--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,45 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+
+/* * {
+font-family: 'Montserrat';
+} */
+
+* {
+
+font-family: 'Ubuntu';
+}
+
+.header__link {
+	@apply font-semibold uppercase transition-all duration-75 text-slate-300;
+}
+
+.header__link:hover {
+	@apply font-semibold uppercase transition-all duration-150 text-slate-100;
+}
+
+.header__link {
+	@apply font-semibold uppercase transition-all text-slate-300;
+}
+
+.footer__link {
+	@apply text-sm font-semibold uppercase text-slate-300;
+}
+
+.navbar-link {
+	@apply flex w-52 h-full text-xl text-gray-500 uppercase border-r-2 transition-all duration-75 bg-slate-200 border-r-slate-300;
+}
+
+
+.navbar-link:hover {
+	@apply text-gray-700 transition-all duration-150 bg-slate-100;
+}
+
+.navbar-link__active {
+	@apply flex h-full text-white bg-cyan-700 !important;
+	
+}
