--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -14,6 +14,10 @@ font-family: 'Montserrat';
 font-family: 'Ubuntu', sans-serif;
 }
 
+select:disabled, input:disabled {
+	@apply bg-gray-50 text-gray-400;
+}
+
 .header__link {
 	@apply font-semibold uppercase transition-all duration-75 text-slate-300;
 }
